# RDJAT-Embed

./: LICENSE  QUICK_START.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  results.xlsx  setup.py  steganography.py  test_structure.py  utils.py  verify_rdjat_embed.py  verify_structure.py
docs/: README.md  api.md
examples/: Batch_Testing.m  Proposed_Avg_Method.m
src/rdjat/: __init__.py  __main__.py
src/rdjat/core/: __init__.py  embedding.py  extraction.py
src/rdjat/gui/: __init__.py  interface.py
src/rdjat/utils/: __init__.py  image_processing.py
